corpus/accessop.test
==========
Unary precedence
==========
x.y.z()
---
(source_file
  (function_call
    function: (access_op
      (access_op
        (identifier)
        (identifier))
      (identifier))
    args: (argument_list)))
