corpus/class.test
==========
Basic class
==========
class foo {
}
---
(source_file
  (class_definition
    name: (identifier)
    body: (code_block)))
==========
Class with generics
==========
class Bar<T extends Collection> {
}
---
(source_file
  (class_definition
    name: (identifier)
    generics: (generic_parameters
      (generic_param
        name: (identifier)
        superclass: (identifier)))
    body: (code_block)))
==========
Modifiers
==========
private static final class Baz {
}
---
(source_file
  (class_definition
    (access_modifier)
    (modifier)
    (modifier)
    name: (identifier)
    body: (code_block)))
==========
Interface
==========
interface foo {
  public String toString()
  public int add(int x, int y)
}
---
(source_file
  (class_definition
    name: (identifier)
    body: (code_block
      (function_declaration
        (access_modifier)
        type: (identifier)
        function: (identifier)
        parameters: (parameter_list))
      (function_declaration
        (access_modifier)
        type: (builtintype)
        function: (identifier)
        parameters: (parameter_list
          (parameter
            type: (builtintype)
            name: (identifier))
          (parameter
            type: (builtintype)
            name: (identifier)))))))
