corpus/function.test
==================
Zero-argument function call
==================

hello()
---
(source_file
    (function_call
      (identifier)))

==================
One-argument function call
==================

hello(24)
hello(24,)
---
(source_file
    (function_call
      (identifier)
	(integer))
    (function_call
      (identifier)
	(integer)))

==================
Map function call
==================

hello(foo: bar, hello: world)
hello(foo: bar, hello: world,)
---
(source_file
    (function_call
      function: (identifier)
      key: (identifier)
      value: (identifier)
      key: (identifier)
      value: (identifier))
    (function_call
      function: (identifier)
      key: (identifier)
      value: (identifier)
      key: (identifier)
      value: (identifier)))

==================
Simple function definition
==================

def foo() {
  echo("hello")
}
---
(source_file
  (function_definition
    (identifier)
    (code_block
      (function_call
        function: (identifier)
        args: (string)))))
