corpus/indexing.test
==================
Basic List indexing
==================

def a = [1,2,3]
def b = a[0]
a[0] = 2

---
(source_file
    (declaration
      (identifier)
	(list
	    (integer)
	    (integer)
	    (integer)))
    (declaration
      (identifier)
	(index
	    (identifier)
	    (integer)))
    (assignment
      (index
	  (identifier)
	  (integer))
	(integer)))
