corpus/structure.test
==================
Basic program structure
==================

def a = 1
def b = 2
pipeline {}
---
(source_file
    (declaration
      (identifier)
	(integer))
    (declaration
      (identifier)
	(integer))
  (pipeline_block
    (identifier)))
