corpus/try.test
==========
Try catch
==========
try {
  print("hello")
} catch (ex) {
  print("fail")
}
---
(source_file
  (try_statement
    body: (code_block
      (function_call
        function: (identifier)
        args: (argument_list
          (string
            (string_content)))))
    catch_exception: (identifier)
    catch_body: (code_block
      (function_call
        function: (identifier)
        args: (argument_list
          (string
            (string_content)))))))
==========
Try catch finally
==========
try {
  print("hello")
} catch (ex) {
  print("fail")
} finally {
  print("finally")
}
---
(source_file
  (try_statement
    body: (code_block
      (function_call
        function: (identifier)
        args: (argument_list
          (string
            (string_content)))))
    catch_exception: (identifier)
    catch_body: (code_block
      (function_call
        function: (identifier)
        args: (argument_list
          (string
            (string_content)))))
    finally_body: (code_block
      (function_call
        function: (identifier)
        args: (argument_list
          (string
            (string_content)))))))
