test/corpus/escaped_identifier.test
==========
Escaped identifier as function name
==========
def "def"() {
  "yep"
}
println 'def'()
---
(source_file
  (function_declaration
    function: (escaped_identifier)
    parameters: (parameter_list))
  (closure
    (string
      (string_content)))
  (function_declaration
    type: (identifier)
    function: (escaped_identifier)
    parameters: (parameter_list)))
==========
Escaped identifier in field access
==========
def x = [hysm: 5]
println x."hysm"
---
(source_file
  (declaration
    name: (identifier)
    value: (map
      (map_item
        key: (identifier)
        value: (number_literal))))
  (juxt_function_call
    function: (identifier)
    args: (argument_list
      (dotted_identifier
        (identifier)
        (escaped_identifier)))))
